<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glue</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Connection</string>
    <string name="mail_address">Mail address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_email">Your Email</string>
    <string name="re_enter_email_">Re-enter Email</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_create_stream_main">Create Stream</string>
    <string name="togglePrivate">Private</string>
    <string name="togglePublic">Public</string>
    <string name="private_description">Only participants and guests can display the stream</string>
    <string name="public_description">Anyone can display the stream</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="privacy">Privacy</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="press_to_enter_a_title">Press to enter a title</string>
    <string name="press_to_enter_one_or_more_tags">Press to enter one or more tags</string>
    <string name="title_activity_create_stream_user">Create Stream</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="closed_description">Only explicitly invited people can participate to the stream</string>
    <string name="open_description">Anyone can participate to the stream according to the limitations below</string>
    <string name="participation_type">Participation type</string>
    <string name="participants">Invited participants</string>
    <string name="press_enter_to_add_a_participant">Press enter to add a participant</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="shared_secret_question">Shared secret question</string>
    <string name="shared_secret_question_help">Uninvited persons must answer to the secret question to be granted access to the protected stream</string>
    <string name="press_to_enter_a_secret_question">Press to enter a secret question</string>
    <string name="press_to_enter_the_corresponding_answer">Press to enter the corresponding answer</string>
    <string name="help">Help</string>
    <string name="no_email_address">This contact has no email address</string>
    <string name="email_address_already_added">This email address has already been added</string>
    <string name="participation_request">Participation request</string>
    <string name="participation_request_text">Uninvited persons must request to participate</string>
    <string name="glue_application_icon">Glue application icon</string>
    <string name="no_participant_error">Add one participant at least</string>
    <string name="title_activity_create_stream_location">Create Stream</string>
    <string name="date_pattern">EEE yyyy-MM-dd</string>
    <string name="time_pattern">hh:mmaa</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="enable_gps_dialog">Show location settings?</string>
    <string name="ok">OK</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="none">None</string>
    <string name="address_not_available">Address not available</string>
    <string name="title_activity_location_picker_map">LocationPickerMapActivity</string>
    <string name="no_result">No result found for</string>
    <string name="network_not_available">The network is not available</string>
    <string name="searching_for">Searching for</string>
    <string name="search">Search</string>
    <string name="title_activity_create_stream_summary">Create Stream</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="content">Content</string>
    <string name="participation">Participation</string>
    <string name="localization">Localization</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_search">Search</string>
    <string name="menu_content_new">Add</string>
    <string name="menu_content_import_export">Import-Export</string>
    <string name="app_label">Glue</string>
    <string name="search_hint">Search</string>
    <string name="search_stream_hint">Search streams</string>
    <string name="incorrect_address">Incorrect address</string>
    <string name="invalid_email_address">Email address or name is invalid</string>
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Glue account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your Glue account. </string>
    <string name="title_activity_searchable_stream">SearchableStreamActivity</string>
    <string name="title_activity_stream_detail">StreamDetailActivity</string>
    <string name="menu_content_edit">Add text</string>
    <string name="menu_device_access_camera">Add photo</string>
    <string name="menu_device_access_mic">Add sound</string>
    <string name="create_account">Create an account</string>
    <string name="legal_terms">By clicking the submit button below, you confirm that you have read and agreed to our <a href='http://www.glue.com/legal/terms'>Terms and Conditions</a></string>
    <string name="required_field">You must fill in this field</string>
    <string name="email_address_type_field">Your email address must be in the form example@example.com</string>
    <string name="signing_up">Signing up...</string>

</resources>