<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participation_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closed_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:checked="true"
            android:drawableRight="@drawable/social_add_group"
            android:onClick="onClickToggle"
            android:text="ToggleButton"
            android:textOff="@string/closed"
            android:textOn="@string/open" />
    </TableRow>

</TableLayout>